bug fixed - height of iframe is not covered with browser

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -9,10 +9,6 @@ body {
 	line-height: 1.3;
 	font-weight: 400;
 	box-sizing: border-box;
-	> div {
-		// mix-blend-mode: overlay;
-		transform: translate3d(0, 0, 0);
-	}
 	* {
 		letter-spacing: -0.5px;
 	}
